src/objects/c2g__codaDataProperty__c.object
<CustomObject>
    <description>Stores a part of the formats saved from FinancialForce Print Formatter.</description>
    <fields>
        <fullName>c2g__Accumulate__c</fullName>
        <label>Accumulate</label>
        <picklist>
            <picklistValues>
                <fullName>com_printformat_data_accumulates_none</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_data_accumulates_document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_data_accumulates_page_start</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>com_printformat_data_accumulates_page_end</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>c2g__ExternalId__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>c2g__NumberBoxing__c</fullName>
        <label>NumberBoxing</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PageTable__c</fullName>
        <label>PageTable</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__UnitOfWork__c</fullName>
        <label>Unit of Work</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__VocabId__c</fullName>
        <label>VocabId</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Data Property</label>
    <nameField>
        <label>Data Property Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Properties</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>